# xorq-gallery

./: .codespell.ignore-words  .envrc  .gitignore.template  .gitmodules  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.claude/: CLAUDE.md  sklearn-comparator-migration.md
.claude/plans/: fit-transform-migration.md  sklearn-comparator-migration.md
.envrcs/: .envrc.nix-config  .envrc.secrets.template  .envrc.sops  .envrc.user.flake  .envrc.user.template  .envrc.user.uv
.github/workflows/: ci-benchmark.yml  ci-lint.yml  ci-pre-release.yml  ci-release.yml  ci-test.yml  codspeed.yml
dev/: README.md  _catalog-path.sh  _validate-env.sh  init-catalog-submodule.sh  rebuild-catalog-annex.sh  rebuild-catalog-git.sh  reset-catalog.sh  rm-submodule.sh  switch-catalog-branch.sh
dev/bench/: data.js
docs/adr/: 001-separate-caches-for-exprs-and-builds.md  002-diff-then-apply-catalog-sync.md  003-layered-validation-chain.md  004-git-annex-s3-catalog-backend.md
scripts/: build_all_exprs_from_cache.py
src/xorq_gallery/: __init__.py  api.py  cli.py  utils.py
src/xorq_gallery/catalog/: apply_column_transformer_to_faa.py
src/xorq_gallery/data/: build_paths.json  exprs.json
src/xorq_gallery/data/build_paths/: plot_affinity_propagation.py.json  plot_all_scaling.py.json  plot_classification_probability.py.json  plot_classifier_comparison.py.json  plot_column_transformer_mixed_types.py.json  plot_compare_calibration.py.json  plot_confusion_matrix.py.json  plot_cv_indices.py.json  plot_discretization_strategies.py.json  plot_document_classification_20newsgroups.py.json  plot_faces_decomposition.py.json  plot_kmeans_digits.py.json  plot_kmeans_silhouette_analysis.py.json  plot_lasso_and_elasticnet.py.json  plot_lda_qda.py.json  plot_logistic_multinomial.py.json  plot_mlp_alpha.py.json  plot_nca_classification.py.json  plot_quantile_regression.py.json  plot_roc.py.json  plot_stack_predictors.py.json  plot_svm_kernels.py.json  plot_svm_regression.py.json  (+5 more)
src/xorq_gallery/sklearn/: __init__.py  sklearn_lib.py  utils.py
tests/: test_benchmarks.py  test_examples.py  test_utils.py
(+144 files in other folders)
