[project]
name = "xorq-gallery"
version = "0.1.0"
description = "Gallery of xorq examples demonstrating deferred ML pipelines"
requires-python = ">=3.12,<3.14"
dependencies = [
    "xorq",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "numpy",
    "toolz>=1.1.0",
    "click>=8.3.1",
    "pytest-benchmark>=5.2.3",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
xorq-gallery = "xorq_gallery.cli:cli"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "ipython>=9.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
test = [
    "coverage>=7.13.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
xorq = { git = "https://github.com/xorq-labs/xorq.git", branch = "feat/catalog/check-consistency-opt-out" }

[tool.uv.extra-build-dependencies]
xorq = ["hatchling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow1: test takes between 6 and 17 seconds",
    "slow2: test takes longer than 17 seconds",
    "benchmark: benchmark test (deselect with '-m not benchmark')",
]

[tool.ruff.lint]
extend-select = ["I", "ICN"]

[tool.ruff.lint.isort]
known-first-party = ["xorq_gallery"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2
